--- a/package.json
+++ b/package.json
@@ -3,20 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "elliptic": "^6.5.3",
+    "@material-ui/core": "4.10.0",
+    "@material-ui/icons": "4.9.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "websocket-extensions": "^0.1.4"
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
